--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^9.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "three": "^0.115.0",
     "typescript": "^3.8.3"
   }
 }
