--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "homepage": "https://github.com/plumsirawit/fodeld-website#readme",
   "dependencies": {
     "@types/node": "^13.9.5",
+    "parcel-bundler": "^1.12.4",
     "three": "^0.115.0",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
