--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Project Fodeld Website",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3005",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
+    "dev": "parcel index.html assets/*",
+    "build": "parcel build index.html assets/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
